compiler/tests/fail/typing/x86-64/res_wrong_type.jazz
/* The error should be that the type of "pt" is not compatible with the declared
   return type of function "init".
   Currently, the error is about returning a "reg ptr" that is not given as
   an argument.
*/
fn init () -> stack u64[2] {
   stack u64[2] t;
   reg ptr u64[2] pt;
   t[0] = 0;
   t[1] = 0;
   pt = t;
   return pt;
}

export fn main() -> reg u64 {
  stack u64[2] t;
  reg u64 r;
  t = init();
  r = t[0];
  r += t[1];
  return r;
}

